# shroud

./: .gitignore  .mailmap  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  PRINCIPLES.md  README.md  TRADEMARKS.md  codecov.yml  deny.toml  setup.sh  update.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  (+9 more)
assets/: com.shroud.killswitch.policy
aur/: PKGBUILD  shroud.install
autostart/: openvpn-tray.desktop  shroud.desktop
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEVELOPMENT.md  GATEWAY.md  HEADLESS.md  INSTALL.md  KILLSWITCH.md  PRINCIPLES.md  README.md  RELEASING.md  RESILIENCE.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  VULNERABILITIES.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_ipc_command.rs  fuzz_state_machine_smoke.rs  fuzz_vpn_name.rs
licenses/: CONTRIBUTOR-LICENSE.md  DEPENDENCY-AUDIT.md  LICENSE-COMMERCIAL.md  LICENSING.md  THIRD-PARTY-LICENSES
pkg/: README.md  build.sh
scripts/: audit.sh  aur-test.sh  binary-size.sh  check-vulnerability-sync.sh  coverage.sh  fuzz.sh  perf-smoke.sh  test-all.sh  test-e2e.sh  test-integration.sh  test-nm-mock.sh  test-quick.sh  test-regression.sh  test-unit.sh  test.sh  update.sh
src/: autostart.rs  lib.rs  logging.rs  main.rs  mode.rs
systemd/: openvpn-tray.service  shroud.service
tests/: README.md  chaos.rs  e2e.rs  integration_daemon.rs  leak_test.rs  regression.rs  security_ipc.rs  security_privilege.rs  security_resources.rs  security_signals.rs
(+127 files in other folders)
